--- a/Astro Nails/Views/Account/Login.cshtml
+++ b/Astro Nails/Views/Account/Login.cshtml
@@ -1,26 +1,80 @@
 ﻿@model Astro_Nails.Models.LoginViewModel
 
-<h2>Вход на сайт</h2>
+<div class="logotxt">
+<h2 class="lgtxt">Авторизация</h2>
+</div>
 
-<a asp-action="Register" asp-controller="Account">Регистрация</a>
 
 <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
    
-    <div>
+    <div class="main">
         <div class="form-group">
 
-            <label asp-for="Phone">Введите номер телефона</label>
-            <input type="text" asp-for="Phone" />
+        
+            <input type="text" asp-for="Phone" class="inputlog" placeholder="Номер телефона" />
             @Html.ValidationMessageFor(m => m.Phone)
         </div>
         <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
+           
+            <input asp-for="Password"  class="inputpass" placeholder="Пароль"/>
             @Html.ValidationMessageFor(m => m.Password)
         </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn" />
+        <div class="form-groupp">
+            <input type="submit" value="Войти" class="btn" />           
+<a asp-action="Register" asp-controller="Account">Регистрация</a>
         </div>
     </div>
 </form>
+
+<style>
+    .lgtxt
+    { font-size:60px;
+
+    }
+    .logotxt
+    {
+        position:absolute;
+        left:40%;
+        top:10%;
+        margin-right:200px;
+       
+    }
+    .main
+    {
+        position:absolute;
+        left:43%;
+     
+        top:40%;
+    }
+    .inputlog
+    {
+        width:250px;
+        height:55px;
+        border-radius:8px;
+    }
+     .inputpass
+    {
+        width:250px;
+        height:55px;
+        border-radius:8px;
+    }
+    .form-groupp
+    {
+        padding:20px;
+    }
+    .btn:hover
+    {
+        border:1px solid black;
+        margin-right:40px;
+        transition:0.8s;
+
+    }
+    .btn:not(hover)
+    {
+        transition:0.8s;
+    }
+
+
+
+</style>
