--- a/Astro Nails/Views/Admin/Index.cshtml
+++ b/Astro Nails/Views/Admin/Index.cshtml
@@ -1,22 +1,89 @@
 ﻿@using (Html.BeginForm())
 {
     <td>@Html.ActionLink("Добавить мастера", "Create")</td>
-    <table>
-        <tr>
-            <th>Имя</th>
-            <th>Фамилия</th>
-            <th>Отчество</th>
-            <th></th>
-        </tr>
-        @foreach (var p in Model)
-        {
-            <tr>
-                <td>@p.Name</td>
-                <td>@p.Surname</td>
-                <td>@p.Patronomic</td>
-                <td>@Html.ActionLink("Редактировать", "Edit", new { id = p.Id })</td>
-                <td>@Html.ActionLink("Удалить", "Delete", new { id = p.Id })</td>
-            </tr>
-        }
-    </table>
+   
+
+
+<table class="table">
+	<thead>
+		<tr>
+			<th>Фамилия</th>
+			<th>Имя</th>
+			<th>Отчество</th>
+			<th>Редактировать</th>
+				<th>Удалить</th>
+			
+		</tr>
+		
+
+	</thead>
+	 @foreach (var p in Model)
+		 {
+	<tbody>
+		
+		
+		<tr>
+			<td>@p.Name</td>
+			<td>@p.Surname</td>
+			<td>@p.Patronomic</td>
+			
+			<td>@Html.ActionLink("Редактировать", "Edit", new { id = p.Id }) 
+			
+			</td>
+			<td> 	@Html.ActionLink("Удалить", "Delete", new { id = p.Id })</td>
+			
+		
+		</tr>
+		
+	</tbody>
+	 }
+</table>
 }
+<style>
+.table {
+	width: 100%;
+	border: none;
+	margin-bottom: 20px;
+	border-collapse: separate;
+}
+.table thead th {
+	font-weight: bold;
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	background: #EDEDED;
+	font-size: 14px;
+	border-top: 1px solid #ddd;
+}
+.table tr th:first-child, .table tr td:first-child {
+	border-left: 1px solid #ddd;
+}
+.table tr th:last-child, .table tr td:last-child {
+	border-right: 1px solid #ddd;
+}
+.table thead tr th:first-child {
+	border-radius: 20px 0 0 0;
+}
+.table thead tr th:last-child {
+	border-radius: 0 20px 0 0;
+}
+.table tbody td {
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	font-size: 14px;
+	vertical-align: top;
+}
+.table tbody tr:nth-child(even) {
+	background: #F8F8F8;
+}
+.table tbody tr:last-child td{
+	border-bottom: 1px solid #ddd;
+}
+.table tbody tr:last-child td:first-child {
+	border-radius: 0 0 0 20px;
+}
+.table tbody tr:last-child td:last-child {
+	border-radius: 0 0 20px 0;
+}
+</style>
