--- a/Astro Nails/Views/Master/Index.cshtml
+++ b/Astro Nails/Views/Master/Index.cshtml
@@ -1,8 +1,96 @@
 ﻿@using (Html.BeginForm())
 {
+	
+<div class="mainn">
+	<div class="asd">
+		<h2 class="text">Привет</h2
+        <h2 class="text2">Вот твои заказы:</h2>
+
+	</div>
+
+</div>
+<table class="table">
+	<thead>
+		<tr>
+			<th>Фамилия</th>
+			<th>Имя</th>
+			<th>Отчество</th>
+			<th>Дата</th>
+				
+			
+		</tr>
+		
+
+	</thead>
     @foreach (var p in Model)
     {
-        @p.Name
-    }
+       
+<tbody>
+		
+		
+		<tr>
+				<td>@p.Surname</td>
+			<td>@p.Name</td>
+		
+			<td>@p.Patronomic</td>
+			
+			<td>  @p.DateTime_Order
+			</td>
+		
+			
+		
+		</tr>
+		
+	</tbody>
+	 }
+</table>
 }
 
+<style>
+.table {
+	width: 100%;
+	border: none;
+	margin-bottom: 20px;
+	border-collapse: separate;
+}
+.table thead th {
+	font-weight: bold;
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	background: #EDEDED;
+	font-size: 14px;
+	border-top: 1px solid #ddd;
+}
+.table tr th:first-child, .table tr td:first-child {
+	border-left: 1px solid #ddd;
+}
+.table tr th:last-child, .table tr td:last-child {
+	border-right: 1px solid #ddd;
+}
+.table thead tr th:first-child {
+	border-radius: 20px 0 0 0;
+}
+.table thead tr th:last-child {
+	border-radius: 0 20px 0 0;
+}
+.table tbody td {
+	text-align: left;
+	border: none;
+	padding: 10px 15px;
+	font-size: 14px;
+	vertical-align: top;
+}
+.table tbody tr:nth-child(even) {
+	background: #F8F8F8;
+}
+.table tbody tr:last-child td{
+	border-bottom: 1px solid #ddd;
+}
+.table tbody tr:last-child td:first-child {
+	border-radius: 0 0 0 20px;
+}
+.table tbody tr:last-child td:last-child {
+	border-radius: 0 0 20px 0;
+}
+</style>
